--- a/style.css
+++ b/style.css
@@ -1,3 +1,10 @@
 h1{
-    color: blue;
+    
+    font-family:Arial;
+}
+body{
+    background-color: rgb(130, 130, 255);
+}
+.javascript {
+    font-size: 20px;
 }
